# coinminer

./: .gitignore  CMakeLists.txt  README.md  RUNNING.md
src/: cli.c  cli.h  common.h  main.c  miner.c  miner.h  sha256.c  sha256.h  solo.c  solo.h  stratum.c  stratum.h  wallet.c  wallet.h
src/bitcoin/: block.c  block.h  job.c  job.h
src/coins/: registry.c  registry.h
ui/: App.xaml  App.xaml.cs  Coinminer.Ui.csproj  Coinminer.Ui.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  index.html
ui/Themes/: Dark.xaml  Light.xaml
